WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178407
[GTK][Stable] BackingStoreBackendCairoImpl.h:23:10: fatal error: WebCore/HysteresisActivity.h
https://bugs.webkit.org/show_bug.cgi?id=178407
Summary
[GTK][Stable] BackingStoreBackendCairoImpl.h:23:10: fatal error: WebCore/Hyst...
s172262
Reported
2017-10-17 14:06:39 PDT
I tried to build webkitgtk+ ver 2.18.0 with cairo on macos10.13.
>BackingStoreBackendCairoImpl.h:23:10: fatal error: WebCore/HysteresisActivity.h
Please change in Source/WebCore/platform/graphics/cairo/BackingStoreBackendCairoImpl.h at line 23. - #include <WebCore/HysteresisActivity.h> + #include <WebCore/platform/HysteresisActivity.h>
Attachments
Patch
(1.44 KB, patch)
2017-10-17 23:38 PDT
,
Carlos Garcia Campos
zan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-10-17 16:39:59 PDT
Thanks for this bug report. (In reply to s172262 from
comment #0
)
> I tried to build webkitgtk+ ver 2.18.0 with cairo on macos10.13. > > >BackingStoreBackendCairoImpl.h:23:10: fatal error: WebCore/HysteresisActivity.h > > Please change in > Source/WebCore/platform/graphics/cairo/BackingStoreBackendCairoImpl.h at > line 23. > > - #include <WebCore/HysteresisActivity.h> > + #include <WebCore/platform/HysteresisActivity.h>
WebKit coding style is to add the right include directories, so that full paths are not required. So the right fix is to add the right include path in some CMake file somewhere. Can't tell where without more of a build log to see where BackingStoreBackendCairoImpl.h is being included from. But it's very, very odd that WebCore/platform would not already be in the include path. Anyway, HysteresisActivity has been moved to PAL in trunk, so it'll need to be fixed separately for 2.18. We're not going to fix it ourselves as we don't actually develop or support WebKitGTK+ on Mac, but we do consider community patches when posted following the guidance at
https://webkit.org/contributing-code/#create-the-patch
if you want to take a stab at it.
s172262
Comment 2
2017-10-17 19:30:35 PDT
> We're not going to fix it ourselves as we don't actually develop or support WebKitGTK+ on Mac, > but we do consider community patches when posted following the guidance at >
https://webkit.org/contributing-code/#create-the-patch
if you want to take a stab at it.
I know this isn't only MacOS's matter. See
https://www.mail-archive.com/slackbuilds-users@slackbuilds.org/msg17290.html
and
https://lists.nongnu.org/archive/html/bug-guix/2017-10/msg00083.html
Carlos Alberto Lopez Perez
Comment 3
2017-10-17 20:03:58 PDT
I think the fix may be to include the header quoted as the include is from a header or WebCore into another of WebCore. Can you check if this will fix the issue? - #include <WebCore/HysteresisActivity.h> + #include "HysteresisActivity.h"
Carlos Garcia Campos
Comment 4
2017-10-17 23:38:43 PDT
Created
attachment 324099
[details]
Patch This is for 2.18, it won't apply in trunk
Carlos Garcia Campos
Comment 5
2017-10-18 02:56:20 PDT
Committed
r223597
Carlos Alberto Lopez Perez
Comment 6
2017-10-18 06:26:58 PDT
The fix was merged on WebKitGTK+ 2.18.1 that was released a few hours ago.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug