[GTK][Stable] BackingStoreBackendCairoImpl.h:23:10: fatal error: WebCore/HysteresisActivity.h https://bugs.webkit.org/show_bug.cgi?id=178407

Reviewed by Žan Doberšek.

Do not use #include <WebCore/Foo.h> inside WebCore.

* platform/graphics/cairo/BackingStoreBackendCairoImpl.h: